--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,10 +1,9 @@
+# Extends docker-compose.yml
 version: '3.7'
 
 services:
   backend:
     command: gunicorn config.wsgi
-    env_file: ./envs/prod.env
-  postgres:
     env_file: ./envs/prod.env
   nginx:
     build:
