--- a/docker-compose.qa.yml
+++ b/docker-compose.qa.yml
@@ -1,16 +1,14 @@
-# Extends docker-compose.prod.yml
+# Extends docker-compose.yml
 version: '3.7'
 
 services:
   backend:
-    depends_on:
-      - postgres
-  postgres:
-    image: postgres:11.3-alpine
+    command: gunicorn config.wsgi
+    env_file: ./envs/prod.env
+  nginx:
+    build:
+      dockerfile: ./nginx/Dockerfile.prod
     ports:
-      - 54320:5432
-    env_file: ./envs/dev.env
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-volumes:
-  postgres_data:
+      - 80:80
+      - 443:443
+    env_file: ./envs/prod.env
