Preparing for Heroku deployment config

--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,11 @@
 *.crt
 *.pem
 
-# Environment files
-*.env
-
 # Collected staticfiles
 **/staticfiles/
 
 # Javascript libraries
-node_modules/
+**/node_modules/
 
 # Javacript log files
 npm-debug.log*
