--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,4 +1,3 @@
-
 # Psycopg2 must be built from source on Alpine and it doesn't
 # seem to work with pipenv and I don't want to screw with apk right now.
 FROM python:3.7-slim-stretch
@@ -34,4 +33,4 @@ USER appuser
 COPY . /app/
 
 # Run initialization script.
-ENTRYPOINT ["./scripts/entrypoint.sh"]
+ENTRYPOINT ["./scripts/dev-entrypoint.sh"]
