--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,7 @@ django-environ = "*"
 djangorestframework = "*"
 requests = "*"
 django-rest-auth = {extras = ["with_social"],version = "*"}
+dj-database-url = "*"
 
 [requires]
 python_version = "3.7"
