--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: backend
     build:
       context: ./backend
-      dockerfile: Dockerfile.dev
-    command: python manage.py runserver 0.0.0.0:8000 --nostatic
+      target: base
+    command: ./scripts/dev-entrypoint.sh
     env_file: ./.env
     volumes:
       - ./backend:/app
@@ -27,7 +27,10 @@ services:
       - postgres_data:/var/lib/postgresql/data/
   nginx:
     build:
-      context: ./nginx
+      context: .
+      dockerfile: ./nginx/Dockerfile
+      target: dev
+    command: nginx -g 'daemon off;'
     depends_on:
       - backend
     ports:
