--- a/heroku.yml
+++ b/heroku.yml
@@ -6,6 +6,7 @@ build:
   docker:
     backend: ./backend/Dockerfile
     web:
+      context: .
       dockerfile: ./nginx/Dockerfile
       target: prod
 release:
