--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -20,11 +20,11 @@ RUN apt-get update \
 # Install project dependencies.
 RUN pip install --upgrade pip
 RUN pip install pipenv
-COPY Pipfile Pipfile.lock /app/
+COPY ./backend/Pipfile ./backend/Pipfile.lock /app/
 RUN pipenv install --system --deploy
 
-# Copy project code.
-COPY . /app/
+# Copy backend code.
+COPY ./backend /app/
 
 # Production configuration.
 FROM base as prod
