--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "scaffold",
+  "version": "0.1.0",
   "scripts": {
-    "postbuild": "cd ./frontend && npm install && npm run build",
+    "postbuild": "cd ./frontend && npm install && npm run build"
   }
 }
