--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "scaffold",
   "version": "0.1.0",
   "scripts": {
-    "build": "npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postinstall": "npm install --prefix frontend && npm run build --prefix frontend"
   }
 }
