--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "postinstall": "npm install --prefix frontend && npm run build --prefix frontend"
+    "postinstall": "cd ./frontend && npm install && npm run build"
   }
 }
