Try Docker for Heroku again

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   backend:
     build:
-      target: test
+      target: prod
     command: gunicorn config.wsgi --bind 0.0.0.0:8000 --log-file=- --worker-tmp-dir /dev/shm --workers=2 --threads=4 --worker-class=gthread
   nginx:
     build:
