--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       target: base
-    command: python manage.py runserver 0.0.0.0:8000
+    command: ./scripts/dev-entrypoint.sh
     volumes:
       - ./backend:/app
   frontend:
