--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       target: prod
-    command: gunicorn config.wsgi --bind 0.0.0.0:8000 --log-file=- --worker-tmp-dir /dev/shm --workers=2 --threads=4 --worker-class=gthread
+    command: ./scripts/test-entrypoint.sh
   nginx:
     build:
       target: test
